# asyncfusion

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
.github/workflows/: test.yml
src/asyncfusion/: __init__.py  __main__.py  _eventloop.py  _exceptions.py  _futures.py  _importhook.py  _sockets.py  _synchronization.py  _tasks.py  _utils.py
src/asyncfusion/shims/asyncio/: __init__.py  _eventloop.py  base_events.py  events.py  exceptions.py  futures.py  runners.py  streams.py  tasks.py  threads.py
src/asyncfusion/shims/trio/: __init__.py  _channel.py  _eventloop.py  _exceptions.py  _streams.py  _sync.py  _tasks.py  abc.py  from_thread.py  lowlevel.py  socket.py  to_thread.py
src/cextension/: io_uring.c
